# fuzz-automata

./: LICENSE  README.md  fanmap.py  fuzz-automata.py  fuzzer.py  logger.py  mutator.py  player.py  protocol.py  protocolextractor.py  protocolset.py  proxy.py  requirements.txt  setup.cfg  wsmask.py
.github/workflows/: codeql-analysis.yml
src/fuzz_automata/: fuzzer.py  logger.py  main.py  mutator.py  player.py  portablescript.py  protocol.py  protocolextractor.py  protocolset.py  proxy.py
