[metadata]
name = fuzz-automata-kahiroka
version = 0.0.3
author = kahiroka
author_email = 
description = Seed-based random network fuzzer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/kahiroka/fuzz-automata
project_urls =
    Bug Tracker = https://github.com/kahiroka/fuzz-automata/issues
classifiers =
    Topic :: Security
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pwntools>=4.7.0
    pyradamsa>=0.1.1
    python-nmap>=0.7.1
    scapy>=2.4.5
    msgpack>=1.0.3

[options.entry_points]
console_scripts = 
    fuzz-automata = fuzz_automata.main:main

[options.packages.find]
where = src
